--- a/handlebars/package.json
+++ b/handlebars/package.json
@@ -11,8 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
-    "express-handlebars": "^5.3.4",
-    "pug": "^3.0.2"
+    "express-handlebars": "^5.3.4"
   },
   "devDependencies": {
     "nodemon": "^2.0.14"
