--- a/ejs/package.json
+++ b/ejs/package.json
@@ -10,8 +10,8 @@
   "author": "Cecilia",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1",
-    "pug": "^3.0.2"
+    "ejs": "^3.1.6",
+    "express": "^4.17.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.14"
