--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
-    "pug": "^3.0.2"
+    "express-handlebars": "^5.3.4",
+    "socket.io": "^4.3.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.14"
